--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
     "@angular/cli": "^9.1.3",
-    "@angular/compiler-cli": "^9.0.7"
+    "@angular/compiler-cli": "^9.0.7",
+    "typescript": "~3.7.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.4",
@@ -46,5 +47,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
+  },
+  "engines": {
+    "node": "12.14.1",
+    "npm": "6.13.4"
   }
 }
