--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.0",
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.10",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
